--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -4,14 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scipy.stats chi2_contingency for $\\chi^2$ test for independence, also called Pearson's chi-square test"
+    "# Chi-square test for independence for IB Diploma Mathematics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to import chi2_contingency, pandas and numpy libraries."
+    "When you have a large amount of data you can use Python instead of a calculator to find Chi-square. It is useful for internal assessment and also extended essay. In this article, I will show you how to do it. You can find the all the codes [here](https://medium.com/r/?url=https%3A%2F%2Fgithub.com%2Fshinokada%2Fpython-for-ib-diploma-mathematics%2Fblob%2Fmaster%2FChi-square.ipynb).\n",
+    "\n",
+    "The easiest way to use Python is Jupyter Notebook. Anaconda is a free and open-source distribution of the Python programming languages for scientific computing. Jupyter Notebook is included in Anaconda. You can install Anaconda in this [link](https://www.anaconda.com/distribution/).\n",
+    "\n",
+    "The Chi-square test for independence is also called Pearson’s chi-square test. In order to find Chi-square with Python, scipy.stats.chi2_contingency is a useful tool to use. Please do not confuse with scipy.stats.chisquare . You can find out more details here.\n",
+    "First, we need to import chi2_contingency , pandas and numpy libraries."
    ]
   },
   {
@@ -29,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's say we collected data on the favorite color of T-shirt for men and women. And we want to find out wheter color and gender are independent or not."
+    "Let’s say we collected data on the favorite color of T-shirts for men and women. We want to find out whether color and gender are independent or not."
    ]
   },
   {
@@ -106,13 +111,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "chi2_contingency returns $\\chi^2$, p-value, expected values."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -137,19 +135,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The returned value above, 33.76 is $\\chi^2$, 2.22 is p-value, and the array is expected values."
+    "## $\\chi^2$ value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generally you want to import data from a file. First csv file has data horizontally."
+    "You can find $\\chi^2$ in the first returned value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.76146477535758"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chisquare=chi2_contingency(tshirts)[0]\n",
+    "chisquare"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## p-value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find the p-value in the second returned value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2247293911334693e-07"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pvalue=chi2_contingency(tshirts)[1]\n",
+    "pvalue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Degree of freedom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find the p-value in the third returned value. We are going to use this to find the critical value later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dof=chi2_contingency(tshirts)[2]\n",
+    "dof"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expected values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find the expected values in the forth returned value in an array form. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[41.5, 29. , 37.5, 42. ],\n",
+       "       [41.5, 29. , 37.5, 42. ]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected=chi2_contingency(tshirts)[3]\n",
+    "expected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Horizontal data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generally, you want to import data from a file. This CSV file has data horizontally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +346,13 @@
        "1  Female     35     46   42    27"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tshirtshorizontal = pd.read_csv('Data/tshirts-horizontal.csv')\n",
+    "tshirtshorizontal = pd.read_csv('https://raw.githubusercontent.com/shinokada/python-for-ib-diploma-mathematics/master/Data/tshirts-horizontal.csv')\n",
     "tshirtshorizontal"
    ]
   },
@@ -221,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to remove gender column."
+    "We need to remove the gender column."
    ]
   },
   {
@@ -352,12 +491,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time we use a data laid out vertically."
+    "## Vertical data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This time we use data laid out vertically."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -423,13 +569,13 @@
        "3   Blue    57      27"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tshirtsvertical = pd.read_csv('Data/tshirts-vertical.csv')\n",
+    "tshirtsvertical = pd.read_csv('https://raw.githubusercontent.com/shinokada/python-for-ib-diploma-mathematics/master/Data/tshirts-vertical.csv')\n",
     "tshirtsvertical"
    ]
   },
@@ -629,6 +775,88 @@
    ],
    "source": [
     "chi2_contingency(arr2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Critical values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As I mentioned before you can find the degree of freedom from the array. You need to import chi2 from scipy.state. And define probability from the level of significance, 1%, 5% 10%, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.344866730144373"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import chi2\n",
+    "significance = 0.01\n",
+    "p = 1 - significance\n",
+    "dof = chi2_contingency(arr2)[2]\n",
+    "critical_value = chi2.ppf(p, dof)\n",
+    "value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When the degree of freedom is 3 and at the 1% level of significance the critical value is about 11.34.\n",
+    "You can confirm with this value using cdf."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = chi2.cdf(value, df)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you know how to extract data from the CSV file, it is reasonably easy to find Chi-square, p-value, degree of freedom and critical value."
    ]
   },
   {
