--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "Female     35     46   42    27"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "33.76146477535758"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "2.2247293911334693e-07"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "3"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "       [41.5, 29. , 37.5, 42. ]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "1  Female     35     46   42    27"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "1     35     46   42    27"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "       [35, 46, 42, 27]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "3   Blue    57      27"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "Female     35     46   42    27"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,12 +664,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We remove the first column using `iloc`."
+    "We remove the first row using `iloc`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "Female  35  46  42  27"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "       [35, 46, 42, 27]], dtype=object)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "11.344866730144373"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "0.99"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
