Chi-square updated

--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "Female     35     46   42    27"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "33.76146477535758"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "2.2247293911334693e-07"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "3"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "       [41.5, 29. , 37.5, 42. ]])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "1  Female     35     46   42    27"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "1     35     46   42    27"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "       [35, 46, 42, 27]])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "3   Blue    57      27"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,15 +580,59 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[48, 35],\n",
+       "       [12, 46],\n",
+       "       [33, 42],\n",
+       "       [57, 27]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "We transform data from vertical to horizontal by using `T`."
+    "arr2 = tshirtsvertical.iloc[:,1:].to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33.76146477535759, 2.224729391133464e-07, 3, array([[41.5, 29. , 37.5, 42. ],\n",
+       "        [41.5, 29. , 37.5, 42. ]]))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi2_contingency(arr2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you prefer horizontal data to vertical data, you can transform data from vertical to horizontal by using T."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +695,7 @@
        "Female     35     46   42    27"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +768,7 @@
        "Female  35  46  42  27"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -746,19 +790,19 @@
        "       [35, 46, 42, 27]], dtype=object)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr2=num2.to_numpy()\n",
-    "arr2"
+    "arr3=num2.to_numpy()\n",
+    "arr3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -768,13 +812,13 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chi2_contingency(arr2)"
+    "chi2_contingency(arr3)"
    ]
   },
   {
@@ -793,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +846,7 @@
        "11.344866730144373"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +857,7 @@
     "p = 1 - significance\n",
     "dof = chi2_contingency(arr2)[2]\n",
     "critical_value = chi2.ppf(p, dof)\n",
-    "value"
+    "critical_value"
    ]
   },
   {
@@ -826,20 +870,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.99"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = chi2.cdf(value, df)\n",
     "p"
