--- a/Spearman's rank correlation coefficient.ipynb
+++ b/Spearman's rank correlation coefficient.ipynb
@@ -8,24 +8,26 @@
     "\n",
     "Spearman's rank correlation coefficient shows the correlation between two variables how one variable increases or decreases as the other variable increases which are described as \"monotonic\". Spearman's correlation assesses monotonic relationships whether linear or not.\n",
     "\n",
+    "You can read [A comparison of the Pearson and Spearman correlation here](https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/modeling-statistics/regression/supporting-topics/basics/a-comparison-of-the-pearson-and-spearman-correlation-methods/) \n",
+    "\n",
     "A value of 1 means the set of data is strictly increasing and the value of -1 means it is strictly decreasing. A value of 0 means that data shows no monotonic behavior. the Spearman correlation between two variables will be high when an observation has a similar rank between the two variables.\n",
     "\n",
-    "Examples are the relation between\n",
+    "Examples to use Spearman's correlation are:\n",
     "\n",
     "- [IQ of a person with the number of hours spent on games](https://www.wikiwand.com/en/Spearman%27s_rank_correlation_coefficient)\n",
     "- [Physics and Math ranks](https://www.statisticshowto.datasciencecentral.com/spearman-rank-correlation-definition-calculate/)\n",
     "- [Free university meals and their CGPA scores](https://www.toppr.com/guides/business-mathematics-and-statistics/correlation-and-regression/rank-correlation/)\n",
     "\n",
-    "You can use [the null hypothesis for this test.\n",
+    "You can use [the null hypothesis for this test](https://statistics.laerd.com/statistical-guides/spearmans-rank-order-correlation-statistical-guide-2.php).\n",
     "\n",
-    "You can see all the code from this link.\n",
+    "You can see all the code from this [link](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Spearman's%20rank%20correlation%20coefficient.ipynb).\n",
     "\n",
     "We import necessary libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stat=0.679, p=0.094\n",
+      "stat=0.678571, p=0.093750\n",
       "Probably independent\n"
      ]
     }
@@ -60,7 +62,7 @@
     "data1 = [1,2,3,4,5,6,7]\n",
     "data2=[3,2,1,5,7,4,6]\n",
     "stat, p = spearmanr(data1, data2)\n",
-    "print('stat=%.3f, p=%.3f' % (stat, p))\n",
+    "print('stat=%.6f, p=%.6f' % (stat, p))\n",
     "if p > 0.05:\n",
     "\tprint('Probably independent')\n",
     "else:\n",
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -275,20 +277,6 @@
      "output_type": "stream",
      "text": [
       "stat=nan, p=nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/numpy/lib/function_base.py:2534: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  c /= stddev[:, None]\n",
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in greater\n",
-      "  return (a < x) & (x < b)\n",
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in less\n",
-      "  return (a < x) & (x < b)\n",
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:1892: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  cond2 = cond0 & (x <= _a)\n"
      ]
     }
    ],
