Chi-square updated

--- a/Spearman's rank correlation coefficient.ipynb
+++ b/Spearman's rank correlation coefficient.ipynb
@@ -17,17 +17,11 @@
     "\n",
     "$$r_s=1-\\frac{6\\sum d^2}{n(n^2-1)}$$\n",
     "\n",
-    "This formla is an alternative to Pearson's correlation if the the data are ordinal and monotonic and if there are no ties in data. To compare the Spearman correlation and the Pearson correlation, please read [A comparison of the Pearson and Spearman correlation here](https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/modeling-statistics/regression/supporting-topics/basics/a-comparison-of-the-pearson-and-spearman-correlation-methods/) \n",
+    "This formla is an alternative to Pearson's correlation if the the data are ordinal and monotonic and if there are no ties in data.\n",
     "\n",
     "A value of 1 means the set of data is strictly increasing and the value of -1 means it is strictly decreasing. A value of 0 means that data shows no monotonic behavior. the Spearman correlation between two variables will be high when an observation has a similar rank between the two variables.\n",
     "\n",
-    "Examples to use Spearman's correlation are:\n",
-    "\n",
-    "- [IQ of a person with the number of hours spent on games](https://www.wikiwand.com/en/Spearman%27s_rank_correlation_coefficient)\n",
-    "- [Physics and Math ranks](https://www.statisticshowto.datasciencecentral.com/spearman-rank-correlation-definition-calculate/)\n",
-    "- [Free university meals and their CGPA scores](https://www.toppr.com/guides/business-mathematics-and-statistics/correlation-and-regression/rank-correlation/)\n",
-    "\n",
-    "You can use [the null hypothesis for this test](https://statistics.laerd.com/statistical-guides/spearmans-rank-order-correlation-statistical-guide-2.php). You can find all the code from this [link](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Spearman's%20rank%20correlation%20coefficient.ipynb).\n",
+    "You can find all the code from this [link](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Spearman's%20rank%20correlation%20coefficient.ipynb).\n",
     "\n",
     "Let's start.\n",
     "\n",
@@ -58,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the correlation of the rank at 5km relate to the rank of 10km run."
+    "Let's find how the correlation of the rank at 5km relate to the rank of 10km run."
    ]
   },
   {
@@ -473,6 +467,31 @@
     "    columns=[\"After 5km\",\"End of race\"])\n",
     "rs, pval = spearmanr(race4)\n",
     "print('rs=%.6f, p-value=%.6f' % (rs, pval))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Examples to use Spearman's correlation are:\n",
+    "\n",
+    "- [IQ of a person with the number of hours spent on games](https://www.wikiwand.com/en/Spearman%27s_rank_correlation_coefficient)\n",
+    "- [Physics and Math ranks](https://www.statisticshowto.datasciencecentral.com/spearman-rank-correlation-definition-calculate/)\n",
+    "- [Free university meals and their CGPA scores](https://www.toppr.com/guides/business-mathematics-and-statistics/correlation-and-regression/rank-correlation/)\n",
+    "\n",
+    "You can use [the null hypothesis for this test](https://statistics.laerd.com/statistical-guides/spearmans-rank-order-correlation-statistical-guide-2.php). \n",
+    "\n",
+    "# Reference\n",
+    "\n",
+    "- To compare the Spearman correlation and the Pearson correlation, please read [A comparison of the Pearson and Spearman correlation here](https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/modeling-statistics/regression/supporting-topics/basics/a-comparison-of-the-pearson-and-spearman-correlation-methods/) \n",
+    "\n",
+    "- \n",
+    "\n",
+    "-\n",
+    "\n",
+    "-\n",
+    "\n",
+    "\n"
    ]
   },
   {
