--- a/The Chi-square Goodness of Fit Test and t-test.ipynb
+++ b/The Chi-square Goodness of Fit Test and t-test.ipynb
@@ -29,7 +29,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Null \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reference\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
