--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -832,12 +832,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As I mentioned before you can find the degree of freedom from the array. You need to import chi2 from scipy.state. And define probability from the level of significance, 1%, 5% 10%, etc."
+    "The level of significance and degree of freedom can be used to find the critical value. As I mentioned before you can find the degree of freedom from the array. In order to find critical values, you need to import chi2 from scipy.state and define probability from the level of significance, 1%, 5% 10%, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "11.344866730144373"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,12 +870,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "p = chi2.cdf(value, df)\n",
+    "p = chi2.cdf(critical_value, dof)\n",
     "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The null and alternative hypotheses\n",
+    "\n",
+    "$H_0:$ Two variables are independent.\n",
+    "$H_1:$ Two variables are dependent.\n",
+    "\n",
+    "If we reject the Null hypotheses by comparing the Chi-square value and the critical value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Math SL AA</th>\n",
+       "      <th>Math SL AI</th>\n",
+       "      <th>Math HL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Biology</th>\n",
+       "      <td>25</td>\n",
+       "      <td>46</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chemistry</th>\n",
+       "      <td>15</td>\n",
+       "      <td>44</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Physics</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Math SL AA  Math SL AI  Math HL\n",
+       "Biology            25          46       15\n",
+       "Chemistry          15          44       15\n",
+       "Physics            10          10       20"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subjects = pd.DataFrame(\n",
+    "    [\n",
+    "        [25,46,15],\n",
+    "        [15,44,15],\n",
+    "        [10,10,20]\n",
+    "    ],\n",
+    "    index=['Biology','Chemistry','Physics'],\n",
+    "    columns=['Math SL AA','Math SL AI','Math HL'])\n",
+    "subjects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If $\\chi_{calc}^2 > \\chi_{critical}^2$ we reject the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chi=20.392835, critical value=9.487729\n",
+      "At 5% level of significance, we accept the null hypotheses. They are independent.\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi, pval, dof, exp = chi2_contingency(subjects)\n",
+    "significance = 0.05\n",
+    "p = 1 - significance\n",
+    "critical_value = chi2.ppf(p, dof)\n",
+    "print('chi=%.6f, critical value=%.6f' % (chi, critical_value))\n",
+    "if chi > critical_value:\n",
+    "\tprint('At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.')\n",
+    "else:\n",
+    "\tprint('At 5% level of significance, we accept the null hypotheses. They are independent.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively we can compare p-value and the level of siginificance.\n",
+    "If `p-value < the level of significance`, we reject the null hypotheses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chi=20.392835, p-value=0.000418\n",
+      "At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi, pval, dof, exp = chi2_contingency(subjects)\n",
+    "significance = 0.05\n",
+    "print('chi=%.6f, p-value=%.6f' % (chi, pval))\n",
+    "if pval < significance:\n",
+    "\tprint('At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.')\n",
+    "else:\n",
+    "\tprint('At 5% level of significance, we accept the null hypotheses. They are independent.')"
    ]
   },
   {
