Chi-square update

--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
      "output_type": "stream",
      "text": [
       "chi=20.392835, critical value=9.487729\n",
-      "At 5% level of significance, we accept the null hypotheses. They are independent.\n"
+      "At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
      ]
     }
    ],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
