--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
      "output_type": "stream",
      "text": [
       "chi=20.392835, critical value=9.487729\n",
-      "At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
+      "At 0.05 level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
      ]
     }
    ],
@@ -1007,9 +1007,9 @@
     "critical_value = chi2.ppf(p, dof)\n",
     "print('chi=%.6f, critical value=%.6f' % (chi, critical_value))\n",
     "if chi > critical_value:\n",
-    "\tprint('At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.')\n",
+    "\tprint('At %.2f level of significance, we reject the null hypotheses and accept H1. They are not independent.' % (significance))\n",
     "else:\n",
-    "\tprint('At 5% level of significance, we accept the null hypotheses. They are independent.')"
+    "\tprint('At %.2f level of significance, we accept the null hypotheses. They are independent.' % (significance))"
    ]
   },
   {
@@ -1022,26 +1022,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chi=20.392835, p-value=0.000418\n",
-      "At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
+      "p-value=0.000418, significance=0.05\n",
+      "At 0.05 level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
      ]
     }
    ],
    "source": [
     "chi, pval, dof, exp = chi2_contingency(subjects)\n",
     "significance = 0.05\n",
-    "print('chi=%.6f, p-value=%.6f' % (chi, pval))\n",
+    "print('p-value=%.6f, significance=%.2f' % (pval, significance))\n",
     "if pval < significance:\n",
-    "\tprint('At 5% level of significance, we reject the null hypotheses and accept H1. They are not independent.')\n",
+    "\tprint('At %.2f level of significance, we reject the null hypotheses and accept H1. They are not independent.' % (significance))\n",
     "else:\n",
-    "\tprint('At 5% level of significance, we accept the null hypotheses. They are independent.')"
+    "\tprint('At %.2f level of significance, we accept the null hypotheses. They are independent.' % (significance))"
    ]
   },
   {
