Chi-square, Goodness update

--- a/Chi-square.ipynb
+++ b/Chi-square.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -996,20 +996,27 @@
      "output_type": "stream",
      "text": [
       "chi=20.392835, critical value=9.487729\n",
-      "At 0.05 level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
+      "\n",
+      "At 0.05 level of significance, we reject the null hypotheses and accept H1. \n",
+      "They are not independent.\n"
      ]
     }
    ],
    "source": [
     "chi, pval, dof, exp = chi2_contingency(subjects)\n",
+    "\n",
     "significance = 0.05\n",
     "p = 1 - significance\n",
     "critical_value = chi2.ppf(p, dof)\n",
-    "print('chi=%.6f, critical value=%.6f' % (chi, critical_value))\n",
+    "\n",
+    "print('chi=%.6f, critical value=%.6f\\n' % (chi, critical_value))\n",
+    "\n",
     "if chi > critical_value:\n",
-    "\tprint('At %.2f level of significance, we reject the null hypotheses and accept H1. They are not independent.' % (significance))\n",
+    "\tprint(\"\"\"At %.2f level of significance, we reject the null hypotheses and accept H1. \n",
+    "They are not independent.\"\"\" % (significance))\n",
     "else:\n",
-    "\tprint('At %.2f level of significance, we accept the null hypotheses. They are independent.' % (significance))"
+    "\tprint(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
+    "They are independent.\"\"\" % (significance))"
    ]
   },
   {
@@ -1022,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1030,18 +1037,24 @@
      "output_type": "stream",
      "text": [
       "p-value=0.000418, significance=0.05\n",
-      "At 0.05 level of significance, we reject the null hypotheses and accept H1. They are not independent.\n"
+      "\n",
+      "At 0.05 level of significance, we reject the null hypotheses and accept H1. \n",
+      "They are not independent.\n"
      ]
     }
    ],
    "source": [
     "chi, pval, dof, exp = chi2_contingency(subjects)\n",
     "significance = 0.05\n",
-    "print('p-value=%.6f, significance=%.2f' % (pval, significance))\n",
+    "\n",
+    "print('p-value=%.6f, significance=%.2f\\n' % (pval, significance))\n",
+    "\n",
     "if pval < significance:\n",
-    "\tprint('At %.2f level of significance, we reject the null hypotheses and accept H1. They are not independent.' % (significance))\n",
+    "\tprint(\"\"\"At %.2f level of significance, we reject the null hypotheses and accept H1. \n",
+    "They are not independent.\"\"\" % (significance))\n",
     "else:\n",
-    "\tprint('At %.2f level of significance, we accept the null hypotheses. They are independent.' % (significance))"
+    "\tprint(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
+    "They are independent.\"\"\" % (significance))"
    ]
   },
   {
